fix: MemberGoalCommandController getFirst 수정